syntax = "proto3";
package members.v1.health.pkg;


message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3; 
  }
  ServingStatus status = 1;
}

